chore(Server): SonarQube
Cleanup sonar qube issues in the transformation package